Revert "modifiche code smells"
This reverts commit ce1e9d67e0542763727036c8791da8862bafdc79.